--- a/styles.css
+++ b/styles.css
@@ -1,19 +1,81 @@
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+/* CSS RESET ends here */
+
+/* ------------------------------------------------------------------------------------------------------------- */
+
 body {
     margin:0;
+    background-color: #eee;
     display: grid;
-    grid-template-rows: 100px 1fr 50px;
+    grid-template-rows: 100px 1fr;
 }
 
 
 
 /* Header */
 .header {
-    background-color: #222d3a;
+    background-color: #304157;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: fixed;
+    height: 100px;
+    width: 100vw;
+}
+
+.input-wrapper {
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 30px;
-    height: 100px;
+    gap: 20px;
+    margin-left: 4vw;
 }
 
 .search-image {
@@ -28,7 +90,7 @@ body {
 }
 
 .search-bar {
-    width: 200px;
+    width: 30vw;
     height: 40px;
     padding: 4px 8px;
     border-radius: 10px;
@@ -37,36 +99,99 @@ body {
     background-color: #eee;
 }
 
-
-
-/* Footer */
-footer {
-    background-color: #222d3a;
-    font-size: 1rem;
-    height: 50px;
-    position: fixed;
-    bottom: 0;
-    width: 100%;
+.button-wrapper {
+    margin-right: 4vw;
     display: flex;
-    align-items: center;
     justify-content: center;
+    align-items: center;
     gap: 10px;
+    color: white;
+    font-size: 24px;
     font-weight: bold;
 }
 
-#footer-logo {
-    height: 3vh;
-    width: auto;
-    filter: invert(100%);
+.units {
+    width: 60px;
+    height: 30px;
+    border-radius: 10px;
+    border: none;
 }
 
-a:hover {
+.units:hover {
     cursor: pointer;
-    transform: scale(1.05,1.1);
 }
 
-a,
-a:visited {
-    text-decoration: none;
+.slider {
+    height: 26px;
+    width: 26px;
+    border-radius: 50%;
+    transform: translateX(-2px);
+    background-color: #304157;
+    transition: 0.5s;
+}
+
+.slide {
+    transform: translateX(25px);
+}
+
+
+
+/* Main section */
+.content {
+    grid-row: 2;
+    display: grid;
+    grid-template-rows: 1fr 1fr;
+}
+
+h1 {
+    text-align: center;
+    font-size: 2.6rem;
+    margin-bottom: 20px;
+}
+
+.top {
+    background-image: url(./images/sunny.jpg);
+    background-size: cover;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    min-height: 300px;
+    padding: 20px 10px;
+}
+
+.info {
+    background-color: rgba(41, 41, 41, 0.25);
+    border-radius: 10px;
+    width: 80vw;
+    padding: 40px 20px;
+    font-weight: bold;
+    font-size: 1.2rem;
+    color: #fff;
+    display: grid;
+    grid-template-columns: 40% 60%;
+}
+
+.main-info {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 40px;
+}
+
+.temperature,
+.weather {
+    font-size: 2.8rem;
+}
+
+.extra-info {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+}
+
+.bottom {
+    background-color: #304157;
     color: white;
 }
