--- a/styles.css
+++ b/styles.css
@@ -157,6 +157,7 @@ h1 {
     align-items: center;
     min-height: 300px;
     padding: 20px 10px;
+    color: white;
 }
 
 .info {
@@ -166,7 +167,6 @@ h1 {
     padding: 40px 20px;
     font-weight: bold;
     font-size: 1.2rem;
-    color: #fff;
     display: grid;
     grid-template-columns: 40% 60%;
 }
@@ -191,7 +191,23 @@ h1 {
     gap: 20px;
 }
 
+.clock {
+    background-color: rgba(41, 41, 41, 0.25);
+    border-radius: 10px;
+    font-size: 1.2rem;
+    font-weight: bold;
+    width: 80vw;
+    padding: 10px 20px;
+    margin-top: 30px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    line-height: 30px;
+}
+
 .bottom {
     background-color: #304157;
     color: white;
+    padding: 20px 10px;
 }
