--- a/styles.css
+++ b/styles.css
@@ -150,7 +150,7 @@ h1 {
 }
 
 .top {
-    background-image: url(./images/sunny.jpg);
+    background-image: url(./images/blue-sky.jpg);
     background-size: cover;
     display: flex;
     flex-direction: column;
@@ -189,6 +189,21 @@ h1 {
     align-items: center;
     justify-content: center;
     gap: 20px;
+}
+
+.info-wrapper {
+    display: flex;
+    flex-direction: row;
+    gap: 8px;
+    margin-left: 8px;
+}
+
+.humidity-value,
+.wind-value,
+.feels-like-value,
+.pressure-value {
+    font-weight: normal;
+    display: inline;
 }
 
 .clock {
