--- a/styles.css
+++ b/styles.css
@@ -146,7 +146,8 @@ body {
 h1 {
     text-align: center;
     font-size: 2.6rem;
-    margin-bottom: 20px;
+    margin: 0 20px 20px;
+    font-weight: bold;
 }
 
 .top {
@@ -160,6 +161,7 @@ h1 {
     color: white;
 }
 
+.unimportant-info,
 .info {
     background-color: rgba(41, 41, 41, 0.25);
     border-radius: 10px;
@@ -167,6 +169,10 @@ h1 {
     padding: 40px 20px;
     font-weight: bold;
     font-size: 1.2rem;
+}
+
+.info {
+    margin-bottom: 30px;
     display: grid;
     grid-template-columns: 40% 60%;
 }
@@ -174,13 +180,14 @@ h1 {
 .main-info {
     display: flex;
     flex-direction: column;
+    justify-content: center;
     align-items: center;
     gap: 40px;
 }
 
 .temperature,
 .weather {
-    font-size: 2.8rem;
+    font-size: 2.75rem;
 }
 
 .extra-info {
@@ -191,17 +198,30 @@ h1 {
     gap: 20px;
 }
 
+.unimportant-info {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    row-gap: 20px;
+}
+
 .info-wrapper {
     display: flex;
     flex-direction: row;
-    gap: 8px;
+    gap: 6px;
     margin-left: 8px;
 }
 
 .humidity-value,
 .wind-value,
 .feels-like-value,
-.pressure-value {
+.pressure-value,
+.pressure-value,
+.population-value,
+.longitude-value,
+.latitude-value,
+.rain-value,
+.sunrise-value,
+.sunset-value {
     font-weight: normal;
     display: inline;
 }
@@ -225,4 +245,70 @@ h1 {
     background-color: #304157;
     color: white;
     padding: 20px 10px;
+}
+
+@media (min-width: 800px) {
+    .content-wrapper {
+        display: grid;
+        grid-template-columns: 60% 40%;
+        grid-template-rows: 240px 90px;
+        column-gap: 8vw;
+        row-gap: 50px;
+    }
+
+    h1 {
+        margin-top: 2vh;
+        margin-bottom: 4vh;
+    }
+
+    .clock {
+        margin-top: 0;
+    }
+
+    .info {
+        margin-bottom: 0;
+    }
+
+    .clock,
+    .info {
+        width: 40vw;
+        min-width: fit-content;
+    }
+
+    .unimportant-info {
+        grid-row: 1 / 3;
+        grid-column: 2;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        gap: 40px;
+        width: 20vw;
+    }
+}
+
+@media (max-width: 430px) {
+    .unimportant-info {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 20px;
+    }
+
+    .info {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 40px;
+    }
+
+    .main-info {
+        display: grid;
+        grid-template-columns: 40% 60%;
+    }
+
+    .unimportant-info,
+    .info,
+    .clock {
+        margin-right: auto;
+    }
 }
