--- a/styles.css
+++ b/styles.css
@@ -255,17 +255,42 @@ h1 {
     display: flex;
     flex-wrap: wrap;
     gap: 20px;
-    margin: 100px 20px;
+    margin-top: 80px;
+    justify-content: center;
 }
 
 .day {
     background-color: #44648fa2;
     border-radius: 10px;
-    height: 180px;
-    width: 180px;
+    height: 200px;
+    width: 200px;
     font-weight: bold;
     padding: 10px 20px;
     font-size: 1.6rem;
+    display: grid;
+    grid-template-columns: 50% 50%;
+}
+
+.week-day {
+    grid-column: 1 / 3;
+    grid-row: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.left-day,
+.right-day {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+}
+
+.sky {
+    width: 80px;
+    height: auto;
 }
 
 
